[package]
name = "drivel"
description = "Infer a schema from JSON input, and generate synthetic data based on the inferred schema."
license = "MIT"
authors = ["Daniël Hogers <daniel@hgrsd.nl>"]
version = "0.2.0"
edition = "2021"
repository = "https://github.com/hgrsd/drivel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.37", default-features = false, features = ["alloc"] }
clap = { version = "4.5.4", features = ["derive"] }
fake = { version = "2.9.2", features = ["chrono"] }
jemallocator = "0.5.4"
lazy_static = "1.4.0"
rand = "0.8.1"
rayon = "1.10.0"
regex = "1.8.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
url = "2.5.0"
uuid = { version = "1.8.0", features = ["v4"] }
